log
Thu 05 Oct 2023 02:44:54 AM UTC: 
 tests:  0|5
total_score: 0/70
b5d3e7e
Thu 05 Oct 2023 03:10:43 AM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  2|4
total_score: 15/70
1b34252
Thu 05 Oct 2023 03:19:14 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f6372c2
Thu 05 Oct 2023 03:20:19 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
979aafb
Thu 05 Oct 2023 03:28:49 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:7: error: unused variable ‘numerosValidos’ [-Werror=unused-variable]
   47 |   int numerosValidos[10] = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
      |       ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a00681e
Thu 05 Oct 2023 03:30:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:11: error: unused variable ‘numeroActual’ [-Werror=unused-variable]
   51 |       int numeroActual = n -> sudo[i][j];
      |           ^~~~~~~~~~~~
sudoku.c:47:7: error: unused variable ‘numerosValidos’ [-Werror=unused-variable]
   47 |   int numerosValidos[10] = {0, 0, 0, 0, 0, 0, 0, 0, 0, 0};
      |       ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
69fee47
Thu 05 Oct 2023 03:32:04 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|3
total_score: 25/70
fa9ddc4
Thu 05 Oct 2023 03:32:33 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|4
total_score: 10/70
68ddfc1
Thu 05 Oct 2023 03:34:57 AM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:100:5: error: ‘numerosValidos’ undeclared (first use in this function)
  100 |     numerosValidos[k] = 1;
      |     ^~~~~~~~~~~~~~
sudoku.c:100:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9a9c4aa
Thu 05 Oct 2023 03:35:39 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
93d9342
Thu 05 Oct 2023 03:37:07 AM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3298160
Thu 05 Oct 2023 03:46:22 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|4
total_score: 10/70
2b4fd8c
Thu 05 Oct 2023 03:49:37 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:87:11: error: unused variable ‘x’ [-Werror=unused-variable]
   87 |       int x = (k / 3) * 3 + (p / 3);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
4a87abc
Thu 05 Oct 2023 03:50:00 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:88:11: error: unused variable ‘y’ [-Werror=unused-variable]
   88 |       int y = (k % 3) * 3 + (p % 3);
      |           ^
sudoku.c:87:11: error: unused variable ‘x’ [-Werror=unused-variable]
   87 |       int x = (k / 3) * 3 + (p / 3);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
2a94620
Thu 05 Oct 2023 03:51:52 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|4
total_score: 10/70
aec5069
Thu 05 Oct 2023 03:53:39 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
5bcd7e2
Thu 05 Oct 2023 10:22:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c44ff49
